ch02/secret-types/tls/ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webpage
  labels:
    app.kubernetes.io/name: webpage
spec:
  containers:
  - name: webpage
    image: nginx:stable
    ports:
      - containerPort: 80
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: webpage-service
spec:
  selector:
    app.kubernetes.io/name: webpage
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: ingress-tls
    hosts:
      - webpage.your.hostname
  rules:
  - host: webpage.your.hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webpage-service
            port:
              number: 80
